--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,85 @@ h1, h2, h3, h4, h6{
     font-size: 16px;
     margin: 0;
 }
+
+/*--------------------------
+    Responsive CSS Style  
+----------------------------*/
+
+@media only screen and (max-width: 688px){
+    .container{
+        width: 100%;
+        padding: 0;
+    }
+    .header-section{
+        padding: 20px 0;
+    }
+    .nav {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+    }
+    .nav ul{
+        flex-direction: column;
+        justify-content: center;
+    }
+    .nav ul li:last-child{
+        display: none;
+    }
+    .top-players-header, .latest-blogs-title{
+        padding-left: 30px;
+    }
+    .players {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-row-gap: 25px;
+        padding-left: 30px;
+    }
+    .latest-blogs {
+        grid-template-columns: repeat(1, 1fr );
+        padding-left: 25px;
+    }
+    .blog {
+        flex-direction: column;
+    }
+    .blog-details {
+        padding: 0;
+    }
+    .courses {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+    .container{
+        width: 100%;
+        padding: 0;
+    }
+    .nav {
+        display: flex;
+        justify-content: space-evenly;
+        align-items: center;
+        flex-direction: column;
+    }
+    .top-players-header{
+        padding-left: 30px;
+    }
+    .players {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-row-gap: 25px;
+        padding-left: 30px;
+    }
+    .latest-blogs {
+        grid-template-columns: repeat(1, 1fr );
+        padding-left: 25px;
+    }
+    .latest-blogs-header{
+        padding-left: 30px;
+    }
+    .courses {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
